--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NumadSP22_Team24_A8</string>
     <string name="helper_text_login">Max Length: 15 characters</string>
+    <string name="channel_name">Channel 1</string>
 </resources>
