Login activity: User name, Login button, Signup button Signup activity: Email Username App icon App name: Puddle V1 Chat Room :Margin at the bottom, Bigger gif images Action bar: Contrast -> change to white text ChatHistory: Smaller gifs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NumadSP22_Team24_A8</string>
+    <string name="app_name">Puddle V1</string>
     <string name="helper_text_login">Max Length: 15 characters</string>
     <string name="channel_name">Channel 1</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
