--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="user_db">users</string>
     <string name="chat">chats</string>
+    <string name="send_sticker">Send Sticker</string>
 </resources>
