--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="user_db">users</string>
     <string name="chat">chats</string>
     <string name="send_sticker">Send Sticker</string>
+    <string name="new_chat">New Chat</string>
 </resources>
