--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="s8">Sticker 8</string>
     <string name="s9">Sticker 9</string>
     <string name="s10">Sticker 10</string>
+    <string name="log_out">Log out</string>
 </resources>
